Add swagger schema docs for Broker,BrokerOtion and BrokerCategory models
